--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ body {
     background-color: #0436cc;
 }
 
-.flash {
+.gameflash {
     background-color: white;
+}
+
+.userflash {
+    background-color: green;
 }
